jdbc: Tweak env scripts part 2